--- a/README
+++ b/README
@@ -47,6 +47,16 @@ $ vim passwords.vim
 
 Make sure ruby and pandoc is installed. Wordpress timezone settings might prevent your posts from being immediately released.
 
+I am using two wrapper scripts to enable syntax highlighting. If you use the following syntax, it should be highlighted on wordpress.com:
+
+[code ruby]
+
+  def time
+    :now
+  end
+
+[end]
+
 
 TIPS
 
