--- a/README
+++ b/README
@@ -6,7 +6,7 @@ TO INSTALL:
 
 
 cd ~
-git clone git@github.com:`echo "Enter your name on Github:"; read REPLY; echo $REPLY`/.vim.git
+echo "Enter your name on Github:"; git clone git@github.com:`read REPLY; echo $REPLY`/.vim.git
 ln -s ~/.vim/vimrc ~/.vimrc
 ln -s ~/.vim/gvimrc ~/.gvimrc
 cd ~/.vim
