--- a/README
+++ b/README
@@ -1,3 +1,12 @@
+
+This configuration is a bit out of date. For a nice default setup, i recommend having a look at Vimified.
+
+https://github.com/zaiste/vimified
+
+
+
+Otherwise..
+
 TO INSTALL:
 
 1. Fork this repo on Github
