--- a/README
+++ b/README
@@ -19,5 +19,4 @@ FEATURES
 
 ---
 
-Copyright 2011 Jostein Berre Eliassen where relevant.
-Released under the MIT license.
+Anything that could be considered my intellectual property in this repo is released under the MIT license.
