--- a/README
+++ b/README
@@ -1,5 +1,5 @@
 
-This is my good old Vim setup, that has evolved over the years. I don't usually clone this repo manually -- it is handlet by some autoinstall script.
+This is my good old Vim setup, that has evolved over the years. I don't usually clone this repo manually -- it is handled by some autoinstall script.
 
 TO INSTALL:
 
